<resources>
    <string name="app_name">HALL OF FAME INDONESIA</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="Militer">Militer</string>
    <string name="Arsitek">Arsitek</string>
    <string name="Pendidikan">Pendidikan</string>
    <string name="Agama">Agama</string>
    <string name="Seniman">Seniman</string>
    <string name="Olahraga">Olahraga</string>
 <!-- activity_artikel-->
    <string name="ttl">Tempat Tanggal Lahir</string>
    <string name="deskripsi">DESKRIPSI TOKOH</string>
    <string name="nato">Nama Tokoh</string>
    <string name="kategori">Kategori</string>
    <string name="share">Share Our App :</string>

    <!--activity_feedback-->
    <string name="masukan">Masukkan Anda Sangat Berguna Bagi Kami</string>
    <string name="submit">Submit</string>
    <!--hint-->
    <string name="nama">Nama</string>
    <string name="instusi">Institusi</string>
    <string name="isi">Isi Pesan</string>


    <!--activity_tokoh-->
    <string name="militer">Kategori Militer</string>


    <!--item-->
    <string name="alliance">Alliance</string>
    <string name="pahlawan">Pahlwan Pembela Kebenaran</string>
</resources>
