<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jasontood.halloffameindo.FeedbackActivity"
    android:background="@drawable/bgcolor"
    android:id="@+id/drawer"
    android:orientation="vertical">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

      <ImageView
          android:layout_width="match_parent"
          android:layout_height="150dp"
          android:padding="20dp"
          android:src="@drawable/feedback"/>
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="20sp"
          android:text="@string/masukan"
          android:textColor="#ffffff"
          android:textStyle="bold"
          android:gravity="center"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="25dp"
          android:layout_marginRight="25dp"
          android:layout_marginTop="25dp"
          android:hint="@string/nama"
          android:textColor="#ffffff"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="25dp"
          android:layout_marginRight="25dp"
          android:hint="@string/instusi"
          android:textColor="#ffffff"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="25dp"
          android:layout_marginRight="25dp"
          android:hint="@string/isi"
          android:inputType="textLongMessage"
          android:textColor="#ffffff"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="25dp"
          android:layout_marginRight="25dp"
          android:hint=""
          android:inputType="textLongMessage"
          android:textColor="#ffffff"/>
      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="25dp"
          android:layout_marginRight="25dp"
          android:hint=""
          android:inputType="textLongMessage"
          android:textColor="#ffffff"/>

      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/submit"
          android:background="#f08944"
          android:textStyle="bold"
          android:layerType="software"
          android:layout_marginLeft="25dp"
          android:layout_marginTop="20dp"/>
  </LinearLayout>



    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/nav_view"
        app:menu="@menu/nav"></android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>
