<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer"
    tools:context="com.example.jasontood.halloffameindo.Artikel"

    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/fotoprofile"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:src="@drawable/tokoh"
                    android:paddingTop="15dp"
                    android:layout_centerHorizontal="true"
                    />

            </RelativeLayout>


            <TextView
                android:id="@+id/textNamatokoh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nato"
                android:textColor="#000000"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/ttl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ttl"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/kategori"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:text="@string/kategori"
                android:textColor="#000000"
                android:textSize="20sp" />



            <TextView
                android:id="@+id/deskripsi"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_margin="10dp"
                android:text="@string/deskripsi"
                android:textColor="#000000" />


        </LinearLayout>



        <LinearLayout
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            >


            <TextView
                android:id="@+id/app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="10dp"
                android:text="@string/share"
                android:textColor="#b3000000"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/fb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@id/app"
                android:src="@mipmap/logofacebook"/>

            <ImageView
                android:id="@+id/tw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_tweeter"/>

            <ImageView
                android:id="@+id/wa"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@mipmap/ic_whatsapp"/>

            <ImageView
                android:id="@+id/gp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_googleplus"/>

        </LinearLayout>

    </RelativeLayout>


    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/nav_view"
        app:menu="@menu/nav"></android.support.design.widget.NavigationView>



</android.support.v4.widget.DrawerLayout>
